<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_from"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/new_from"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_to"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/new_to"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_count"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/new_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>

            <CheckBox
                android:id="@+id/new_sumup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_sumup" />

            <CheckBox
                android:id="@+id/new_hide_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_hide_all"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/new_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="0"
        android:drawableLeft="@drawable/new_die"
        android:text="@string/new_dice"
        android:textSize="16dp" />

</LinearLayout>