<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:text="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/title_background"
        android:textColor="@color/title_foreground"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_weight="0"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
           android:gravity="center"
        android:layout_weight="1"
        android:background="@color/roll_background"
        >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical"
	        >
		    <TextView
		        android:id="@+id/roll"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:text="@string/before_roll"
		        android:textColor="@color/roll_name"
		        android:textSize="20dp"
		        />
		    <TextView
		        android:id="@+id/roll_result"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:textSize="30dp"
		        android:textColor="@color/roll_result"
		        />
        </LinearLayout>	
    </ScrollView>
    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
    </ListView>
    <TextView
        android:id="@id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/no_dice"
        android:textSize="16dp"
        android:layout_weight="1"
        />
</LinearLayout>